--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
+    <!-- App colors -->
+    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <!-- Top App Bar and text colors -->
+    <color name="top_app_bar_color">@color/colorPrimary</color>
+
+    <!-- Bottom Navigation Bar colors -->
+    <color name="bottom_nav_icon_color">#757575</color>
+    <color name="bottom_nav_text_color">#757575</color>
+    <color name="primaryColor">#12A058</color>
+
 </resources>
