--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,4 +85,8 @@
         <item name="android:drawableLeft">@drawable/ic_check</item>
         <item name="android:radius">16dp</item>
     </style>
+    <style name="Theme.MyUnDivorcer" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+    </style>
+
 </resources>
