--- a/app/src/main/res/layout/fragment_shop_list.xml
+++ b/app/src/main/res/layout/fragment_shop_list.xml
@@ -49,26 +49,27 @@
             android:hint="כמות"
             android:inputType="numberSigned" />
 
+        <ImageButton
+            android:id="@+id/bUploadImage"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_camera" />
+
         <Spinner
             android:id="@+id/unitSpinner"
             android:layout_width="110dp"
             android:layout_height="45dp"
             android:layout_marginStart="8dp" />
     </LinearLayout>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="בחר מיקום" />
 
         <View
             android:layout_width="0dp"
