--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,5 +10,5 @@
         android:clickable="true"
         android:onClick="navigateToLoginPage"
         android:scaleType="centerCrop"
-        android:src="@drawable/start_page" />
+        android:src="@drawable/start_page2" />
 </RelativeLayout>
