--- a/app/src/main/res/layout/fragment_shop_item_options_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_shop_item_options_bottom_sheet.xml
@@ -36,7 +36,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="16dp">
 
         <Button
             android:id="@+id/btnConfirmUpdate"
@@ -54,4 +55,13 @@
             android:layout_weight="1"
             android:text="מחק פריט" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btnAddImage"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="הוסף תמונה" />
+
 </LinearLayout>
