--- a/app/src/main/res/layout/shop_list_item.xml
+++ b/app/src/main/res/layout/shop_list_item.xml
@@ -19,19 +19,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/ivItemImage"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toEndOf="@+id/cbBought"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
     <com.example.myundivorcer.utils.StrikeThroughTextView
         android:id="@+id/tvShopItemTitle"
-        android:layout_width="200dp"
+        android:layout_width="0dp"
         android:layout_height="45dp"
         android:gravity="center"
         android:text="Item Title"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/cbBought"
+        app:layout_constraintStart_toEndOf="@+id/ivItemImage"
+        app:layout_constraintEnd_toStartOf="@+id/tvItemCount"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlCompat" />
-
 
     <com.example.myundivorcer.utils.StrikeThroughTextView
         android:id="@+id/tvItemCount"
@@ -42,9 +51,7 @@
         android:inputType="number"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tvShopItemTitle"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btnDeleteItem"
