--- a/app/src/main/res/layout/fragment_wishlists.xml
+++ b/app/src/main/res/layout/fragment_wishlists.xml
@@ -26,4 +26,15 @@
         android:layout_margin="16dp"
         android:src="@drawable/baseline_add_shopping_cart_24" />
 
+    <!-- New Button to fetch API data -->
+    <Button
+        android:id="@+id/fetchApiDataButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_margin="16dp"
+        android:text="Fetch Data"
+        android:backgroundTint="?attr/colorPrimary"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"/>
 </LinearLayout>
