--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,19 +19,52 @@
                 style="@style/ButtonRoundedSquare"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="156dp"
+                android:layout_marginTop="196dp"
                 android:src="@drawable/baseline_edit_note_24"
                 app:layout_constraintEnd_toStartOf="@+id/btnGoToMyWishlists1"
-                app:layout_constraintHorizontal_bias="0.381"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearanceOverlay="@style/ShapeAppearance.LargeComponent" />
 
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/btnGoToMyWishlists1"
+                style="@style/ButtonRoundedSquare"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_shopping_cart"
+                app:layout_constraintStart_toEndOf="@+id/btnGoToMyRecipes"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/btnGoToMyRecipes"
+                app:shapeAppearanceOverlay="@style/ShapeAppearance.LargeComponent" />
+
+            <!-- Text for "My Recipes" -->
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="התבשילים שלי"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="@+id/btnGoToMyRecipes"
+                app:layout_constraintTop_toBottomOf="@+id/btnGoToMyRecipes"
+                app:layout_constraintEnd_toEndOf="@+id/btnGoToMyRecipes" />
+
+            <!-- Text for "My Wishlists" -->
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="הרשימות שלי"
+                android:textAlignment="center"
+                app:layout_constraintStart_toStartOf="@+id/btnGoToMyWishlists1"
+                app:layout_constraintTop_toBottomOf="@+id/btnGoToMyWishlists1"
+                app:layout_constraintEnd_toEndOf="@+id/btnGoToMyWishlists1" />
+
+            <!-- Home Page Text (Centered below) -->
             <TextView
                 android:id="@+id/textView4"
-                android:layout_width="177dp"
-                android:layout_height="93dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="92dp"
                 android:background="@color/quantum_lightblue"
                 android:drawableBottom="@drawable/ic_home"
                 android:drawablePadding="8dp"
@@ -41,52 +74,10 @@
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintVertical_bias="0.3"
-                tools:ignore="MissingConstraints" />
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/btnGoToMyWishlists1"
-                style="@style/ButtonRoundedSquare"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_marginBottom="472dp"
-                android:src="@drawable/ic_shopping_cart"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.758"
-                app:layout_constraintStart_toStartOf="parent"
-                app:shapeAppearanceOverlay="@style/ShapeAppearance.LargeComponent"
-                tools:ignore="UsingOnClickInXml" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="התבשילים שלי"
-                android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.305"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnGoToMyRecipes"
-                tools:ignore="MissingConstraints" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
-                android:text="הרשימות שלי"
-                android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.758"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/btnGoToMyWishlists1" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </FrameLayout>
 
 </RelativeLayout>
