--- a/app/src/main/res/layout/fragment_wishlists.xml
+++ b/app/src/main/res/layout/fragment_wishlists.xml
@@ -43,7 +43,7 @@
         android:id="@+id/apiDataTextBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="API Data will be shown here"
+        android:hint="להצגת הסבר על המתכון לחץ ייבא הסבר"
         android:inputType="textMultiLine"
         android:layout_margin="16dp"
         android:scrollbars="vertical" />
